<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/game_view"
        tools:context=".Game">

    <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomNavigation" app:menu="@menu/nav_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/buttonScrollView" android:layout_marginBottom="59dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/buttonLinearLayout">
            <TextView
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameTextView" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="36sp" android:typeface="serif"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
            <ImageButton
                    android:layout_width="105dp"
                    android:layout_height="105dp" app:srcCompat="@drawable/image2" android:id="@+id/carButton"
                    android:scaleType="fitCenter" android:layout_gravity="top|center_horizontal"
                    android:background="#f2efef" android:minHeight="50dp" android:minWidth="50dp"
                    android:maxHeight="150dp" android:maxWidth="150dp" android:contentDescription="@string/carImage"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
            <ImageButton
                    android:layout_width="105dp"
                    android:layout_height="105dp" app:srcCompat="@drawable/house" android:id="@+id/houseButton"
                    android:scaleType="centerInside" android:layout_gravity="top|center_horizontal"
                    android:background="#f2efef" android:minHeight="50dp" android:minWidth="50dp"
                    android:maxHeight="150dp" android:maxWidth="150dp" android:contentDescription="@string/houseImage"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
            <ImageButton
                    android:layout_width="105dp"
                    android:layout_height="105dp" app:srcCompat="@drawable/thing" android:id="@+id/thingButton"
                    android:scaleType="centerInside" android:layout_gravity="top|center_horizontal"
                    android:background="#f2efef" android:minHeight="50dp" android:minWidth="50dp"
                    android:maxHeight="150dp" android:maxWidth="150dp" android:contentDescription="@string/thingImage"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
            <ImageButton
                    android:layout_width="105dp"
                    android:layout_height="105dp" app:srcCompat="@drawable/person" android:id="@+id/personButton"
                    android:scaleType="centerInside" android:layout_gravity="top|center_horizontal"
                    android:background="#f2efef" android:minHeight="50dp" android:minWidth="50dp"
                    android:maxHeight="150dp" android:maxWidth="150dp"
                    android:contentDescription="@string/personImage"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
            <ImageButton
                    android:layout_width="105dp"
                    android:layout_height="105dp" app:srcCompat="@drawable/food" android:id="@+id/foodButton"
                    android:scaleType="centerInside" android:layout_gravity="top|center_horizontal"
                    android:background="#f2efef" android:minHeight="50dp" android:minWidth="50dp"
                    android:maxHeight="150dp" android:maxWidth="150dp" android:contentDescription="@string/foodImage"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>