<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameTemplate" android:id="@+id/game_template">

    <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomNavigation" app:menu="@menu/nav_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@drawable/add_button"
            android:id="@+id/option1Button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="484dp" android:contentDescription="@string/option1Image"
            android:scaleType="centerInside" app:layout_constraintVertical_bias="0.0"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@drawable/apps"
            android:id="@+id/option2Button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
            android:layout_marginEnd="28dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="484dp" android:contentDescription="@string/option2Image"
            android:scaleType="centerInside" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orTextView"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/option1Button" android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="484dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/option2Button"
            android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/wic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="73dp"
            app:layout_constraintBottom_toTopOf="@+id/option1Button" android:textSize="36sp" android:typeface="serif"
    />

</android.support.constraint.ConstraintLayout>